# plywood-cutter

./: Cargo.toml  PlywoodCutter.slnx
.github/workflows/: build.yml  deploy.yml  release.yml
PlywoodCutter/: PlywoodCutter.csproj  Program.cs  _Imports.razor  package-lock.json  package.json  tsconfig.json
PlywoodCutter/Components/: NumberField.razor
PlywoodCutter/Helpers/: SvgHelpers.cs
PlywoodCutter/Layout/: MainLayout.razor  NavMenu.razor
PlywoodCutter/Models/: CutPiece.cs  CuttingResult.cs  PlacedPiece.cs  Sheet.cs
PlywoodCutter/Pages/: BoxBuilder.razor  Home.razor  LaserCut.razor  NotFound.razor
PlywoodCutter/Properties/: launchSettings.json
PlywoodCutter/Scripts/: box3d.ts  interop.ts
PlywoodCutter/Services/: CuttingOptimizerService.cs  L10n.cs  LocalStorageService.cs
PlywoodCutter/wwwroot/: index.html
PlywoodCutter/wwwroot/js/: box3d.js  box3d.js.map  interop.js  interop.js.map
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: box_builder.rs  lib.rs  models.rs  optimizer.rs
crates/core/tests/: optimizer_tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: box3d.rs  lib.rs  svg.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  router.ts
frontend/src/assets/: app.css
frontend/src/components/: NumberField.vue
frontend/src/helpers/: svg.ts
frontend/src/pages/: BoxBuilder.vue  Home.vue
frontend/src/services/: optimizer.ts  rustService.ts  types.ts  wasmBoxBuilder.ts
(+1 files in other folders)
