[package]
name = "cutter-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cutter-core = { path = "../core" }
cutter-ui = { path = "../ui" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
js-sys = "0.3"
tracing = "0.1"
tracing-wasm = "0.2"
